connect to MysqlDB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,1 @@
-server.port=8080
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testDB
-spring.jpa.show-sql=true
+spring.profiles.active=dev
