--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,5 +6,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/loc_db_c?createDatabaseIfNotEx
 spring.datasource.username=db_user
 spring.datasource.password=db_pass
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
